--- a/SiteAquario/appsettings.json
+++ b/SiteAquario/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SiteAquarioContext": "Server=(localdb)\\mssqllocaldb;Database=SiteAquario.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SiteAquario.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
